Updation in web-crawler -> renamed index.js to site.js --> added three  funtions, one for lyrics rendering without an html file and, second is to getting the rendering htmlwith jquery-ajax, and the last funtion is to getting the event to pass in the second funtion -> modified in style.css changes made in couple of lines and commented some to avoid unnecessary actions ->modification in artists.html : some line changes and spacing ->modified base.html changes made in line 32 : added artists count ->modified lyrics.html : added unique class names in linked list and independent list for rendering sidebar in on click event ->modification in songs.html : some line chagnes and spacing

--- a/static/style.css
+++ b/static/style.css
@@ -1,41 +1,42 @@
 h1.main_h1{
     color:blue;
     text-align: center;
+   
 }
 a{
-    color: black !important;
-    text-decoration: none !important;
+    color: #003480 !important;
+     text-decoration: none !important;
 }
-li{
+/* li{
     color:rgb(0, 37, 202);
     border-radius: 2px solid black;
     
-}
-li:hover{
+} */
+/* li:hover{
     padding: 20px ;
-    color: red ;
-    transition: transform .9s ;
+    color: red;
     
-}
-.song-name:hover{
+    
+} */
+/* .song-name:hover{
     margin-left: 20px !important;
     transition: transform .9s !important ;
-}
+} */
 
-.lyrics-songs:hover{
+/* .lyrics-songs:hover{
     color: black !important;
     margin-left: 0px !important;
     background-color: crimson !important;
-}
+} */
 
 h1.main_h1{
     color: black;
 }
-.box-names{
+/* .box-names{
     
     border-style: groove;
     border-radius: 50px;
-}
+} */
 .left-sidebar{
     background-color: cadetblue;
     border-right:4px solid rgb(0, 107, 110) ;
